data/derived/comb/progs/unify/prog8708.ml.out
Characters 77-102:
  | h::t -> matchHeads (listReverse (explode w)) (listReverse (explode w));;
                       ^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type char list
       but an expression was expected of type 'a list list
       Type char is not compatible with type 'a list 
